feat(user-avatar): add multer cloudinary integration for avatar upload
