# module/user/user.route.mjs
@@ -3,11 +3,12 @@ import express from "express";
 import {
     createAddressController, updateAddressController,
     deleteAddressController, updateUserController,
-    getAddressController, getAllAddressController
+    getAddressController, getAllAddressController,
+    setUserAvatarController,
 } from "./user.controller.mjs";
+import { uploadFile, } from '../../common/util/multer.mjs'
 
 const router = express.Router();
-
 
 router.put("/", updateUserController);
 
@@ -21,5 +22,6 @@ router.put("/address/:id", updateAddressController);
 
 router.delete("/address/:id", deleteAddressController);
 
+router.post("/avatar", uploadFile.single("avatar"), setUserAvatarController);
 
 export default router;
